[gd_scene load_steps=7 format=3 uid="uid://c4ciguhuugsmo"]

[ext_resource type="Script" path="res://scenes/main-menu/main_menu.gd" id="1_vm5rm"]
[ext_resource type="PackedScene" uid="uid://1m6ux8m8xy7i" path="res://scenes/main-menu/title.tscn" id="2_g7p0i"]
[ext_resource type="Theme" uid="uid://bx30hgdcpfdve" path="res://assets/themes/menu_theme.tres" id="3_v77f4"]
[ext_resource type="AudioStream" uid="uid://bfaings75kjhm" path="res://assets/audio/music/Somewhere (RT 3.173)/SynFantasy Somewhere Intensity 1.wav" id="5_fx33c"]
[ext_resource type="AudioStream" uid="uid://di1nwrsrb5uid" path="res://assets/audio/TitleScreen Audio/dvngen_title.wav" id="6_rjjr5"]

[sub_resource type="GDScript" id="GDScript_3qkge"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_vm5rm")

[node name="Node2D" parent="." instance=ExtResource("2_g7p0i")]

[node name="Center" type="CenterContainer" parent="."]
offset_top = 440.0
offset_right = 1280.0
offset_bottom = 960.0

[node name="MainColumn" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="MenuVBox" type="VBoxContainer" parent="Center/MainColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="Center/MainColumn/MenuVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme = ExtResource("3_v77f4")
text = "START GAME"
script = SubResource("GDScript_3qkge")

[node name="OptionsButton" type="Button" parent="Center/MainColumn/MenuVBox"]
layout_mode = 2
theme = ExtResource("3_v77f4")
text = "OPTIONS"
script = SubResource("GDScript_3qkge")

[node name="QuitButton" type="Button" parent="Center/MainColumn/MenuVBox"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("3_v77f4")
text = "QUIT"
script = SubResource("GDScript_3qkge")

[node name="StartbuttonAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rjjr5")
volume_db = 10.0
bus = &"SFX"

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fx33c")
volume_db = -10.0
bus = &"Music"

[connection signal="pressed" from="Center/MainColumn/MenuVBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Center/MainColumn/MenuVBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Center/MainColumn/MenuVBox/QuitButton" to="." method="_on_quit_button_pressed"]
